fix item title too long & too close heart button

--- a/qmomo/scss/about.scss
+++ b/qmomo/scss/about.scss
@@ -29,11 +29,11 @@
 }
 .about_content{
 	flex:0 0 85%;
-	padding: 0 20px 20px;
+	padding: 0 40px 40px;
 	font-size:.9rem;
 	h3{
-		margin:0 0 0 -20px;
-		padding:10px 0 10px 10px;
+		margin:0 0 10px;
+		padding:8px 0 8px 10px;
 		border-left:20px solid  #fdd8d6;
 	}
 	img{
