--- a/qmomo/scss/item.scss
+++ b/qmomo/scss/item.scss
@@ -46,7 +46,7 @@
 	width:620px;
 	padding:0 20px 0 30px;
 	.mid_title{
-		margin: 0 0 10px;	
+		margin: 0 20px 10px 0;	
 	}
 }
 
